Stretch goal sticky navigation style + stretch goal newsletter form markup

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
       </div>
 
     </section>
+    
+    <section class="subscribe">
+      <div class="subscribe-text">
+        <h3>Subscribe to our Newsletter</h3>
+        <p>Weekly newsletters and don't worry we won't be spamming you!</p>
+        <form action="post">
+          Fullname:<br>
+          <input type="text" name="fullname" id="name"><br>
+          Email Address:<br>
+          <input type="email" name="email" id="email"><br>
+          <button>Subscribe</button>
+        </form>
+      </div>
+    </section>
 
     <footer>
       <p>Copyright SpaceWalkers 2018</p>
