stretch goal newsletter form styled for mobile

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <h3>Subscribe to our Newsletter</h3>
         <p>Weekly newsletters and don't worry we won't be spamming you!</p>
         <form action="post">
-          Fullname:<br>
+          <p>Full Name:</p>
           <input type="text" name="fullname" id="name"><br>
-          Email Address:<br>
+          <p>Email Address:</p>
           <input type="email" name="email" id="email"><br>
           <button>Subscribe</button>
         </form>
